# backend

./: Dockerfile  pyproject.toml  requirements.txt
accounts/migrations/: 0001_initial.py
carts/migrations/: 0001_initial.py
category/migrations/: 0001_initial.py
kernel/: settings.py  urls.py
orders/migrations/: 0001_initial.py
store/migrations/: 0001_initial.py  0002_productgallery_reviewrating_variation.py
